--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.2.1
 configparser==4.0.2
+cryptography==42.0.8
 dfdatetime==20240504
 dfvfs==20240505
+dnspython==2.7.0
 dotenv==0.9.9
 dtfabric==20230520
 enum-compat==0.0.3
+Flask==3.1.1
 hexdump==3.3
 idna==3.10
+impacket==0.12.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+ldap3==2.9.1
+ldapdomaindump==0.10.0
 libbde-python==20240502
 libcaes-python==20240413
 libewf-python==20240506
@@ -34,9 +44,15 @@ libvsapm-python==20240503
 libvsgpt-python==20240504
 libvshadow-python==20240504
 libvslvm-python==20240504
+MarkupSafe==3.0.2
 more-itertools==5.0.0
 psutil==7.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
+pycryptodome==3.23.0
+pycryptodomex==3.23.0
+pyOpenSSL==24.0.0
 pyparsing==2.4.7
 python-dotenv==1.1.0
 python-evtx==0.7.4
@@ -44,8 +60,10 @@ python-registry==1.3.1
 pytsk3==20250312
 PyYAML==6.0.2
 requests==2.32.3
+setuptools==80.8.0
 six==1.17.0
 unicodecsv==0.14.1
 urllib3==2.4.0
+Werkzeug==3.1.3
 xattr==1.1.4
 zipp==1.0.0
