Adds deleted file recovery feature
Adds functionality to recover deleted files and associated metadata.

This change introduces a new module to scan for and process deleted files (identified by $I and $R prefixes).
It extracts the original file's metadata (path, size, deletion timestamp) and recovers the file content.
A metadata file is created alongside the recovered file.

The UI is updated to display restored files in a dedicated category. When selecting a restored file,
the user can choose between viewing the file content or the associated metadata.

A new dependency `pdfminer.six` has been added for parsing pdf files.

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ libvshadow-python==20240504
 libvslvm-python==20240504
 MarkupSafe==3.0.2
 more-itertools==5.0.0
+pdfminer.six==20250506
 psutil==7.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
